# makeros-hub-agent

./: .gitignore  README.md  SECURITY.md  bootstrap.sh  config.toml.example  install.sh  pyproject.toml  update.sh
docs/: failure-watch-onnx.md
makeros_hub/: __init__.py  __main__.py  agent.py  bambu_ssdp.py  config.py  diagnostics.py  discovery.py  enroll.py  http.py  ingest.py  lan_scan.py  multipart.py  probes.py  tailscale.py  update.py
makeros_hub/printers/: __init__.py  bambu.py  bambu_camera.py  bambu_parse.py  bambu_send.py  camera.py  failure_watch.py  jobs.py  klipper.py  manager.py  onnx_detector.py  queue_progress.py  rtsp_camera.py  threemf_objects.py  yolo_decode.py  yolo_preprocess.py
makeros_hub/vprinter/: __init__.py  auth.py  bind_server.py  capture.py  cert.py  ftp_server.py  ip_allocator.py  live_pool.py  manager.py  mqtt_broker.py  outbox.py  report.py  ssdp.py
scripts/: tailscale-setup.sh
systemd/: makeros-hub.service
tests/: test_agent.py  test_bambu_camera.py  test_bambu_send.py  test_bambu_ssdp.py  test_camera.py  test_diagnostics.py  test_discovery.py  test_dispatch.py  test_failure_watch.py  test_ingest.py  test_ip_allocator.py  test_jobs.py  test_klipper.py  test_lan_scan.py  test_live_pool.py  test_manager_camera.py  test_multi_vp_ssdp.py  test_multi_vp_supervisor.py  test_onnx_detector.py  test_printers.py  test_probes.py  test_rtsp_camera.py  test_send_command.py  test_tailscale.py  test_threemf_objects.py  test_update.py  test_vp_ca_delivery.py  test_vprinter.py  test_yolo_decode.py  test_yolo_preprocess.py
