[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "makeros-hub-agent"
version = "0.1.0"
description = "On-LAN bridge between makerspace 3D printers and the makeros cloud control plane (the SimplyPrint replacement)"
requires-python = ">=3.11"
# Stdlib-only for the enrollment slice — no runtime deps. The printer-adapter
# slice (PR 5) adds httpx + the vendor libraries.
dependencies = []

[project.scripts]
makeros-hub = "makeros_hub.__main__:main"

[tool.setuptools]
packages = ["makeros_hub"]
