[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "makeros-hub-agent"
version = "0.3.0"
description = "On-LAN bridge between makerspace 3D printers and the makeros cloud control plane (the SimplyPrint replacement)"
requires-python = ">=3.11"
# Enrollment + heartbeat are stdlib-only. The Bambu LAN adapter (PR 5) adds
# paho-mqtt; it's the only runtime dep and is installed into a venv by
# install.sh. The pure report-parsing layer (printers/bambu_parse) has no deps.
dependencies = ["paho-mqtt>=2.0,<3"]

[project.scripts]
makeros-hub = "makeros_hub.__main__:main"

[tool.setuptools]
packages = ["makeros_hub", "makeros_hub.printers"]
