[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "makeros-hub-agent"
version = "0.45.0"
description = "On-LAN bridge between makerspace 3D printers and the makeros cloud control plane (the SimplyPrint replacement)"
requires-python = ">=3.11"
# The source-of-truth version is makeros_hub/__init__.py:__version__ (reported in
# the heartbeat + compared by OTA); keep this field in lockstep on each tag.
#
# Enrollment + heartbeat are stdlib-only. install.sh is the authoritative installer:
# it provisions the venv and pip-installs the runtime deps below with these same pins,
# and an offline/failed dep install degrades gracefully (printers report
# 'agent_missing_paho'; the virtual printer / AI failure-watch report their dep missing)
# rather than breaking heartbeats.
dependencies = [
  "paho-mqtt>=2.0,<3",     # Bambu LAN MQTT telemetry + control
  "cryptography>=42,<46",  # virtual-printer self-signed TLS (CA + leaf)
]

[project.optional-dependencies]
# AI failure-watch (camera spaghetti detection). Optional — onnx_detector soft-imports
# these and falls back to a p=0.0 stub when absent (older hubs / offline installs).
failure-watch = ["onnxruntime>=1.17,<2", "Pillow>=10,<13"]

[project.scripts]
makeros-hub = "makeros_hub.__main__:main"

[tool.setuptools]
packages = ["makeros_hub", "makeros_hub.printers", "makeros_hub.vprinter"]
